# opengl-castle

./: .gitignore  CMakeLists.txt
assets/shaders/: base.vert.glsl
src/: main.cpp
src/engine/: Image.cpp  Image.hpp  RenderDevice.cpp  RenderDevice.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Window.cpp  Window.hpp  consts.hpp  gl.hpp
src/game/: MeshDrawComponent.cpp  MeshDrawComponent.hpp
src/graph/: Component.hpp  Node.cpp  Node.hpp
src/libs/: stb_image.h
src/tests/: tests.cpp  tests.hpp
